# benger-platform

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md
publications/Dataset_ARR/: .gitignore  CITATION.cff  DATA_LICENSE  Makefile  README.md  _quarto.yml  manuscript.ipynb  manuscript.qmd  pyproject.toml  references.bib
publications/Dataset_ARR/arxiv_submission/: manuscript.tex  references.bib
publications/Dataset_ARR/assets/: tbl_agreement.tex  tbl_calderon_per_annotator_human.tex  tbl_error_modes_falloesung.tex  tbl_error_modes_grundpr.tex  tbl_findings.tex  tbl_full_results_auto.tex  tbl_full_results_auto_benchathon.tex  tbl_full_results_auto_grundpr.tex  tbl_full_results_auto_zjs.tex  tbl_full_results_rubric.tex  tbl_full_results_rubric_benchathon.tex  tbl_full_results_rubric_grundpr.tex  tbl_full_results_rubric_zjs.tex  tbl_glossary.tex  tbl_human_participants.tex  tbl_judge_calibration.tex  tbl_judge_calibration_detail.tex  tbl_judge_config.tex  tbl_judge_swap.tex  tbl_judge_swap_agreement.tex  tbl_main_leaderboard.tex  tbl_metric_vs_human.tex  tbl_operational.tex  tbl_reasoning_ablation.tex  tbl_reasoning_core.tex  tbl_rq4_bootstraps.tex  tbl_rq4_by_bereich.tex  tbl_rubric_mapping.tex  tbl_system_cost.tex  tbl_system_overview.tex
publications/Dataset_ARR/scripts/: _gp_decision.py  _stats.py  assign_grading_to_prod.py  build_arxiv_bundle.sh  build_benchathon_mock.py  compute_agreement.py  derive_error_analysis.py  derive_grundprinzipien_summary.py  derive_inter_judge_agreement.py  derive_leaderboard_csvs.py  derive_metric_vs_human.py  derive_operational_metadata.py  derive_paper_exports.py  derive_reasoning_ablation.py  derive_reasoning_core.py  derive_zjs_summary.py  export_human_automatic_metrics.py  fig_calderon_per_reviewer.py  pull_ablation_sidecar.py  pull_korrektur_sidecar.py  review_gp_judge_vs_gold.py  rq4_data_trace.py  rq4_walkthrough_table.py  rq5_calderon_intersection.py  rq5_calderon_per_judge.py  rq5_calderon_pooled.py  rq5_creator_calibrated_alt_test.py  rq5_creator_calibrated_alt_test_v2.py  rq5_data_trace.py  rq5_judge_calibration.py  rq5_judge_per_task.py  rq5_pool_normality.py  upload_hf.py  zjs_apply_ip_clearance.py  zjs_build_ip_map.py
services/api/: .bandit  .coveragerc  .env.ci  .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  Makefile  README.md  alembic.ini  analytics_service.py  batch_processing_config.py  cdn_service.py  celery_client.py  database.py  digest_service.py  docker_enable_evaluation.sh  email_service.py  email_validation.py  encryption_service.py  evaluation_config.py  extensions.py  feature_flag_service.py  init_complete.py  init_db.py  label_config_parser.py  label_config_sanitizer.py  label_config_validator.py  label_config_version_service.py  main.py  models.py  notification_service.py  object_storage.py  org_api_key_service.py  performance_monitoring.py  project_models.py  project_schemas.py  projects_api.py  pyproject.toml  (+26 more)
services/api/alembic/: README.md  env.py
services/api/auth_module/: __init__.py  config.py  dependencies.py  email_verification.py  models.py  service.py  token_service.py  user_service.py
services/api/localization/: __init__.py  translations.py
services/api/middleware/: org_context.py
services/api/routers/: __init__.py  api_keys.py  auth.py  cost_estimate.py  custom_model_org_credentials.py  custom_models.py  dashboard.py  feature_flags.py  file_uploads.py  generation.py  generation_revoke.py  generation_task_list.py  health.py  invitations.py  leaderboards.py  llm_models.py  llm_models_admin.py  lti_admin.py  marketplace.py  model_access.py  notifications.py  org_api_keys.py  organizations.py  prompt_structures.py  reports.py  runs.py  storage.py  tasks.py  test_seeding.py  users.py
services/api/schemas/: __init__.py  auth_schemas.py  billing_schemas.py  evaluation_schemas.py  feature_flag_schemas.py  lti_schemas.py  profile_completion_schemas.py  template_schemas.py
services/api/scripts/: backfill_eval_config_display_names.py  backfill_immediate_eval_config_id.py  backfill_korrektur_falloesung_normalize.py  check_migration_health.py  check_model_catalog_drift.py  check_schema_diff.py  cleanup_backfilled_legacy_judge_metrics.py  cleanup_legacy_prompts.py  compare_schemas.py  enable_evaluation_features.py  generate_comprehensive_migration.py  generate_squashed_migration.py  migrate_to_flexible_data.py  monitor_schema_drift.py  populate_model_constraints.py  recover_missing_immediate_evals.py  reset_admin_password.py  seed_vertretbar_org.py  setup_demo_org.py  setup_test_annotation_project.py
services/api/seeds/: llm_models.yaml  llm_models_loader.py
services/api/services/: aggregate_summaries.py  analytics_service.py  batch_processing_config.py  encryption_service.py  feature_flag_service.py  migration_utils.py  org_api_key_service.py  performance_monitoring.py  rate_limiter.py  redis_cache.py  refresh_token_service.py  role_validation.py  ssl_tls_config.py  static_assets_config.py  task_formatter.py  template_service.py  text_extraction.py  token_estimation.py  user_api_key_service.py  websocket_clustering.py
services/api/tests/: README_ROUND_TRIP_TESTS.md  conftest.py  run_email_tests.sh  test_api_with_auth.py  test_cost_estimate_request_validator.py  test_coverage_analysis.py  test_database_directly.py  test_db_organizations.py  test_email_verification_url.py  test_eval_field_classification.py  test_extensions_loading.py  test_feature_flags_router.py  test_generation_task_list.py  test_multiple_orgs.py  test_project_performance.py  test_project_progress_mix.py  (+2 more)
services/workers/: .coveragerc  .env.example  =1.18.0  Dockerfile  Dockerfile.base  database.py  email_service.py  generation_structure_parser.py  model_parameter_config.py  models.py  mutation-floors.cfg  notification_service.py  parse_existing_generations.py  project_models.py  pyproject.toml  pytest-unit.ini  pytest.ini  requirements-test.txt  requirements.txt  response_parser.py  run_tests.sh  sendgrid_client.py  setup.cfg  tasks.py  worker_celery.py
(+2426 files in other folders)
