[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benger-api"
version = "0.1.0"
description = "BenGER API Gateway"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.139.2",
    "uvicorn[standard]==0.51.0",
    "pydantic==2.13.4",
    "python-multipart==0.0.32",
    "PyJWT[crypto]==2.13.0",
    "cryptography>=43.0.0,<47.0.0",
    "bcrypt==4.3.0",
    "python-dotenv==1.2.2",
    "httpx==0.28.1",
    "celery==5.6.3",
    "redis==5.3.1",
    "sqlalchemy==2.0.51",
    "psycopg2-binary==2.9.12",
    # asyncpg is the asyncio Postgres driver for the new async engine
    # (database.async_engine). 0.30.x verified against PG 18.3 on prod
    # (Bitnami/Broadcom Photon rebuild) via 2026-05-18 pre-flight.
    "asyncpg==0.31.0",
    "alembic==1.18.5",
    "email-validator==2.3.0",
    # starlette version is managed by fastapi
    "anyio==4.14.2",
    "openai==1.109.1",
    "anthropic==0.117.0",
    "google-genai>=1.0.0",
    # tiktoken powers the prompt-token count in services/api/services/
    # token_estimation.py — without it the cost estimator falls back to
    # a chars/4 heuristic (encoding="chars/4 (no tiktoken)") and
    # under-estimates German text by ~20-30 %. requirements.txt already
    # listed it but the api Dockerfile installs from pyproject.toml, so
    # prod was running the fallback path silently.
    "tiktoken>=0.5.0",
    "aiohttp==3.14.1",
    "python-jose[cryptography]==3.5.0",
    "jinja2==3.1.6",
    "python-dateutil==2.9.0.post0",
    "pytz>=2023.3",
    "jsonschema==4.26.0",
    # Streaming JSON parser for memory-bounded project import (issue #158).
    # NOTE: the api Dockerfile installs from pyproject.toml, not requirements.txt
    # (see the tiktoken note above) — keep this in sync with requirements.txt or
    # the streaming import silently fails to import ijson.
    "ijson>=3.2.0",
    # boto3/botocore back the S3-compatible object storage singleton (presigned
    # URLs, multipart upload). The api Dockerfile installs from pyproject.toml, so
    # these MUST live here (not only requirements.txt) or the storage service
    # silently falls back to local filesystem even when STORAGE_TYPE=minio (#158).
    "boto3>=1.35.0",
    "botocore>=1.43.11",
    # Statistical computing for confidence intervals and significance testing
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    # SSE for real-time streaming
    "sse-starlette==2.4.1",
    # zstandard decodes the newest Anki .apkg form (collection.anki21b is a
    # zstd-compressed SQLite collection) for the flashcard import IR
    # (services/shared/anki, issue #35). The api Dockerfile installs from
    # pyproject.toml, so this MUST live here (not only requirements.txt) or the
    # import endpoint fails to import the anki package. arm64 wheels published —
    # no FIPS/SIGILL concern, so a normal pin is fine. Keep in sync with
    # services/workers/pyproject.toml.
    "zstandard>=0.22,<1.0",
    # Document text extraction for comfortable exam setup (issue #35): Word
    # (.docx via mammoth -> Markdown) and text-layer PDF (pdfplumber) uploads
    # become editable exam-field text. api-only.
    "mammoth>=1.6,<2.0",
    "pdfplumber>=0.10,<1.0",
    "stripe>=11.0.0,<14.0.0",  # Vertretbar billing (extended-only; community never imports)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0"
]
test = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "pytest-html>=4.1.1",
    "pytest-benchmark>=4.0.0",
    "requests-mock>=1.11.0",
    "factory-boy>=3.3.0",
    "responses>=0.24.1",
    "freezegun>=1.2.2",
    "coverage[toml]>=7.3.2"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
# Production-ready but pragmatic settings
disallow_untyped_defs = false  # Too many functions to fix at once
disallow_incomplete_defs = false  # Allow gradual typing
check_untyped_defs = false
warn_redundant_casts = false
warn_unused_ignores = false
ignore_missing_imports = true
strict_optional = false  # Avoid Optional[Any] issues
no_implicit_optional = false  # Allow implicit Optional
# Still catch important errors
warn_unreachable = true
warn_no_return = true
# SQLAlchemy plugin not available in this environment
# Exclude problematic files from checking entirely
exclude = [
    "alembic/",
    "migration_utils.py", 
    "add_sample_data.py",
    "init_db.py",
    "models.py",  # Skip models due to SQLAlchemy complexity
    "database.py"  # Skip database due to dynamic setattr usage
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "venv/*",
    "__pycache__/*",
    "*/migrations/*",
    "alembic/*",
    "*/test_*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
show_missing = true
skip_covered = true 