[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benger-workers"
version = "0.1.0"
description = "BenGER evaluation workers (Celery + ML metrics)"
requires-python = ">=3.11"
# Single dependency source for the workers images (base + app safety net),
# installed via `uv pip install --system -r pyproject.toml` — same scheme as
# services/api. requirements.txt is gone; test-runner extras stay in
# requirements-test.txt (installed at runtime by the compose test runners).
# NOTE: runtime and test-adjacent deps are deliberately NOT split yet — this
# ports the previous requirements.txt 1:1 so the base image contents are
# byte-compatible; splitting test extras out is a follow-up.
dependencies = [
    # ── SHARED RUNTIME DEPS (keep in sync with services/api) ─────────────────────
    # These also live in services/api/pyproject.toml (the single api dep source; prod, test and
    # dev images all install from it via uv). A single shared constraints file
    # is NOT feasible: each service's Docker build context is its own dir
    # (infra/docker-compose.yml -> context: ../services/{api,workers}), so a
    # `-c ../shared-constraints.txt` include would fall outside the build context and
    # break the image build. Bounds are aligned by hand; a CI drift-check (à la
    # scripts/check_model_catalog_drift.py) is the structural follow-up.
    "celery==5.6.3",
    "redis>=5.0.0,<5.4.0",
    "cryptography>=43.0.0,<47.0.0",  # floor aligned with api; <47 cap rationale in services/api/pyproject.toml
    "PyJWT[crypto]>=2.8.0,<2.14.0",  # bounds aligned with api; LTI 1.3 AGS token client (extended workers)
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.49",
    "python-dotenv==1.2.2",
    "httpx==0.28.1",
    "transformers>=4.57.6",  # Required by sentence-transformers>=3.2.0 for ONNX support
    "sentencepiece>=0.2.1",  # Required by T5Tokenizer for QAGS
    "tiktoken>=0.13.0",  # Required by AlbertTokenizer for SummaC/ViTC
    "torch>=2.12.0,<2.13.0",
    "numpy>=1.26.4,<2.0",  # Cap at <2.0: thinc/spacy wheels assume numpy-1.x ABI (88-byte PyArray_Descr). numpy 2.x rebuilds the dtype struct to 96 bytes; mixing causes ImportError "numpy.dtype size changed" at spacy.load(). Lift this only after thinc/spacy/torch all confirm numpy-2.x wheels in our matrix.
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "nltk>=3.9.4",
    "spacy>=3.7.0,<3.8",  # German NER for coherence metric (Phase 3 academic-rigor). Cap at <3.8 keeps thinc on the 8.2.x line (numpy-1.x ABI). spaCy 3.8 pulls thinc 8.3.x compiled against numpy-2.x and breaks at runtime under our numpy>=1.26.4,<2 stack.
    # Pin to a specific spaCy model release so worker images are reproducible.
    # de_core_news_md is the medium-size German news pipeline; see
    # Dockerfile.base download step for the actual install.
    "de-core-news-md @ https://github.com/explosion/spacy-models/releases/download/de_core_news_md-3.7.0/de_core_news_md-3.7.0-py3-none-any.whl",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.4.0",
    "jsonschema==4.26.0",
    "ijson>=3.5.0",  # Streaming JSON parser for memory-bounded import worker (issue #158)
    # boto3/botocore: the export/import worker streams artifacts to S3-compatible
    # object storage (multipart upload / download); without them the relocated
    # storage singleton falls back to local filesystem (issue #158).
    "boto3>=1.35.0",
    "botocore>=1.43.11",
    "pytest==8.4.2",
    "pytest-asyncio==0.26.0",
    # AI service dependencies
    "openai==1.109.1",
    "anthropic==0.116.0",
    "google-genai>=1.75.0",
    "mistralai>=1.12.4",  # Mistral AI models
    "cohere>=5.21.1",  # Cohere models
    "aiohttp==3.14.1",
    # Neural metrics (GPU on-demand)
    "bert-score>=0.3.13",
    "sentence-transformers>=3.2.0",  # Updated for ONNX backend support
    "moverscore>=1.0.3",
    # pyemd - removed: metadata version mismatch with uv, POT is preferred on all platforms
    # summac removed - conflicts with transformers>=4.57.6 (requires huggingface-hub<=0.17.0)
    # Factuality checks use SummaC or manual NLI approaches
    # ARM64-compatible alternatives
    "onnxruntime>=1.25.1",  # Native ARM64 support
    "optimum[onnxruntime]>=1.21.0",  # HuggingFace ONNX export/inference
    "POT>=0.9.6.post1",  # Earth Mover Distance (works on ARM64, replaces pyemd)
    # Statistics
    "statsmodels>=0.14.0",
    # Testing dependencies
    "psutil>=6.1.0",
    "fakeredis>=2.36.1",
    "memory-profiler>=0.61.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.4.0",  # Prevent tests from hanging indefinitely

    # Anki flashcard import (issue #35): decompresses the newest .apkg form
    # (collection.anki21b = zstd-compressed SQLite). Used by services/shared/anki,
    # imported by both api and workers. arm64 wheels published — normal pin is fine.
    # Keep aligned with the api (services/api/pyproject.toml).
    "zstandard>=0.22,<1.0",
    "stripe>=11.0.0,<13.0.0",  # Vertretbar billing meter reporting (extended-only)
]

[tool.hatch.build.targets.wheel]
# Dep-manifest only — the images copy code directly; nothing is packaged.
bypass-selection = true
